--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "idf.pythonInstallPath": "/opt/anaconda3/bin/python"
+    "idf.pythonInstallPath": "/usr/bin/python3",
+    "idf.espIdfPath": "/Users/mkidris/esp/v5.4.1/esp-idf",
+    "idf.toolsPath": "/Users/mkidris/.espressif"
 }
